--- a/struts2-openejb/struts2-openejb-app/struts2-openejb-ejb/.classpath
+++ b/struts2-openejb/struts2-openejb-app/struts2-openejb-ejb/.classpath
@@ -1,59 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+  <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
   <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
   <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/javaee-api/6.0-3/javaee-api-6.0-3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/javaee-api/6.0-6/javaee-api-6.0-6.jar"/>
   <classpathentry kind="var" path="M2_REPO/junit/junit/4.10/junit-4.10.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.1/hamcrest-core-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-core/4.6.0/openejb-core-4.6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/mbean-annotation-api/4.6.0/mbean-annotation-api-4.6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-jpa-integration/4.6.0/openejb-jpa-integration-4.6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-lang3/3.1/commons-lang3-3.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-api/4.6.0/openejb-api-4.6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-loader/4.6.0/openejb-loader-4.6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-javaagent/4.6.0/openejb-javaagent-4.6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-jee/4.6.0/openejb-jee-4.6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/sun/xml/bind/jaxb-impl/2.2.6/jaxb-impl-2.2.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-jee-accessors/4.6.0/openejb-jee-accessors-4.6.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-core/4.7.1/openejb-core-4.7.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/mbean-annotation-api/4.7.1/mbean-annotation-api-4.7.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-jpa-integration/4.7.1/openejb-jpa-integration-4.7.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-lang3/3.3.2/commons-lang3-3.3.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-api/4.7.1/openejb-api-4.7.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-loader/4.7.1/openejb-loader-4.7.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-javaagent/4.7.1/openejb-javaagent-4.7.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-jee/4.7.1/openejb-jee-4.7.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/sun/xml/bind/jaxb-impl/2.2.7/jaxb-impl-2.2.7.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/sun/xml/bind/jaxb-core/2.2.7/jaxb-core-2.2.7.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/sun/istack/istack-commons-runtime/2.16/istack-commons-runtime-2.16.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/sun/xml/fastinfoset/FastInfoset/1.2.12/FastInfoset-1.2.12.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/openejb-jee-accessors/4.7.1/openejb-jee-accessors-4.7.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/metatype/sxc/sxc-jaxb-core/0.8/sxc-jaxb-core-0.8.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/metatype/sxc/sxc-runtime/0.8/sxc-runtime-0.8.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-cli/commons-cli/1.2/commons-cli-1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-ra/5.9.0/activemq-ra-5.9.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-broker/5.9.0/activemq-broker-5.9.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-client/5.9.0/activemq-client-5.9.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.5/slf4j-api-1.7.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/fusesource/hawtbuf/hawtbuf/1.9/hawtbuf-1.9.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-openwire-legacy/5.9.0/activemq-openwire-legacy-5.9.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-kahadb-store/5.9.0/activemq-kahadb-store-5.9.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-ra/5.10.0/activemq-ra-5.10.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-broker/5.10.0/activemq-broker-5.10.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-client/5.10.0/activemq-client-5.10.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.7/slf4j-api-1.7.7.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/fusesource/hawtbuf/hawtbuf/1.10/hawtbuf-1.10.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-openwire-legacy/5.10.0/activemq-openwire-legacy-5.10.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-kahadb-store/5.10.0/activemq-kahadb-store-5.10.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/activemq/protobuf/activemq-protobuf/1.1/activemq-protobuf-1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-jdbc-store/5.9.0/activemq-jdbc-store-5.9.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-jdbc-store/5.10.0/activemq-jdbc-store-5.10.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/geronimo/components/geronimo-connector/3.1.1/geronimo-connector-3.1.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/geronimo/components/geronimo-transaction/3.1.1/geronimo-transaction-3.1.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/geronimo/specs/geronimo-j2ee-connector_1.6_spec/1.0/geronimo-j2ee-connector_1.6_spec-1.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/objectweb/howl/howl/1.0.1-1/howl-1.0.1-1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/geronimo/javamail/geronimo-javamail_1.4_mail/1.8.2/geronimo-javamail_1.4_mail-1.8.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/xbean/xbean-asm4-shaded/3.15/xbean-asm4-shaded-3.15.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/xbean/xbean-finder-shaded/3.15/xbean-finder-shaded-3.15.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/xbean/xbean-reflect/3.15/xbean-reflect-3.15.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/xbean/xbean-naming/3.15/xbean-naming-3.15.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/xbean/xbean-bundleutils/3.15/xbean-bundleutils-3.15.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hsqldb/hsqldb/2.3.0/hsqldb-2.3.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/geronimo/javamail/geronimo-javamail_1.4_mail/1.8.3/geronimo-javamail_1.4_mail-1.8.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/xbean/xbean-asm5-shaded/4.0/xbean-asm5-shaded-4.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/xbean/xbean-finder-shaded/4.0/xbean-finder-shaded-4.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/xbean/xbean-reflect/4.0/xbean-reflect-4.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/xbean/xbean-naming/4.0/xbean-naming-4.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/xbean/xbean-bundleutils/4.0/xbean-bundleutils-4.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/hsqldb/hsqldb/2.3.2/hsqldb-2.3.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-dbcp/commons-dbcp/1.4/commons-dbcp-1.4.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-pool/commons-pool/1.5.7/commons-pool-1.5.7.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/codehaus/swizzle/swizzle-stream/1.6.2/swizzle-stream-1.6.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1.3/commons-logging-1.1.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/quartz-scheduler/quartz/2.2.0/quartz-2.2.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-jdk14/1.7.5/slf4j-jdk14-1.7.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-impl/1.2.1/openwebbeans-impl-1.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-spi/1.2.1/openwebbeans-spi-1.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-ejb/1.2.1/openwebbeans-ejb-1.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-ee/1.2.1/openwebbeans-ee-1.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-ee-common/1.2.1/openwebbeans-ee-common-1.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-web/1.2.1/openwebbeans-web-1.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-el22/1.2.1/openwebbeans-el22-1.2.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/patch/openjpa/2.3.0-nonfinal-1540826/openjpa-2.3.0-nonfinal-1540826.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/shade/quartz-openejb-shade/2.2.1/quartz-openejb-shade-2.2.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-jdk14/1.7.7/slf4j-jdk14-1.7.7.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-impl/1.2.6/openwebbeans-impl-1.2.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-spi/1.2.6/openwebbeans-spi-1.2.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-ejb/1.2.6/openwebbeans-ejb-1.2.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-ee/1.2.6/openwebbeans-ee-1.2.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-ee-common/1.2.6/openwebbeans-ee-common-1.2.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-web/1.2.6/openwebbeans-web-1.2.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openwebbeans/openwebbeans-el22/1.2.6/openwebbeans-el22-1.2.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/patch/openjpa/2.4.0-nonfinal-1598334/openjpa-2.4.0-nonfinal-1598334.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-lang/commons-lang/2.4/commons-lang-2.4.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/net/sourceforge/serp/serp/1.14.1/serp-1.14.1.jar"/>
